--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -2,7 +2,7 @@
 import { languages } from '@i18n/ui';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 import { getCollection } from 'astro:content';
-import { CollectionMetadata, collectionMetadata } from '@content/config';
+import { CollectionMetadata, collectionMetadata, collectionNameMapping } from '@content/config';
 import MainLayout from '@layouts/MainLayout.astro';
 import BlogCard from '@components/BlogCard.astro';
 
@@ -91,8 +91,8 @@ const { recents, others, collections } = Astro.props;
         {
           collections.map((c: CollectionMetadata) => (
             <li class="badge-box" role="listitem">
-              <a href={`/${lang}/blog/${c.name}`} class="badge capitalize" title={`Blog ${c.name}`} >
-                {c.name}
+              <a href={`/${lang}/blog/${c.name}`} class="badge" title={`Blog ${collectionNameMapping(c.name)}`} >
+                { collectionNameMapping(c.name) }
               </a>
             </li>
           ))
