--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -82,10 +82,10 @@ const { recents, others, collections } = Astro.props;
 
   <br><br><br>
 
-  <section class="categories bg-polygon relative">
+  <section class="collections bg-polygon relative">
     <div class="relative main-width z-10">
       <h2>
-        {t('blog.all-categories')}
+        {t('blog.all-collections')}
       </h2>
       <ul class="badges" role="list">
         {
@@ -132,7 +132,7 @@ const { recents, others, collections } = Astro.props;
 </MainLayout>
 
 <style lang="scss">
-.categories {
+.collections {
   h2 {
     -webkit-text-fill-color: white;
   }
