--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -2,9 +2,10 @@
 import { languages } from '@i18n/ui';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 import { getCollection } from 'astro:content';
-import { CollectionMetadata, collectionMetadata, collectionNameMapping } from '@content/config';
+import { collectionMetadata } from '@content/config';
 import MainLayout from '@layouts/MainLayout.astro';
 import BlogCard from '@components/BlogCard.astro';
+import CollectionsList from '@components/CollectionsList.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -33,7 +34,6 @@ export async function getStaticPaths() {
       props: {
         recents: allPosts.slice(0, 8),
         others: allPosts.slice(-6),
-        collections: collectionMetadata,
       },
     });
   });
@@ -42,7 +42,7 @@ export async function getStaticPaths() {
 }
 
 const param = Astro.params;
-const { recents, others, collections } = Astro.props;
+const { recents, others } = Astro.props;
 ---
 
 <MainLayout
@@ -82,24 +82,7 @@ const { recents, others, collections } = Astro.props;
 
   <br><br><br>
 
-  <section class="collections bg-polygon relative">
-    <div class="relative main-width z-10">
-      <h2>
-        {t('blog.all-collections')}
-      </h2>
-      <ul class="badges" role="list">
-        {
-          collections.map((c: CollectionMetadata) => (
-            <li class="badge-box" role="listitem">
-              <a href={`/${lang}/blog/${c.name}`} class="badge" title={`Blog ${collectionNameMapping(c.name)}`} >
-                { collectionNameMapping(c.name) }
-              </a>
-            </li>
-          ))
-        }
-      </ul>
-    </div>
-  </section>
+  <CollectionsList></CollectionsList>
 
   <br><br><br>
 
@@ -130,11 +113,3 @@ const { recents, others, collections } = Astro.props;
   </section>
 
 </MainLayout>
-
-<style lang="scss">
-.collections {
-  h2 {
-    -webkit-text-fill-color: white;
-  }
-}
-</style>
