--- a/src/components/home/techs/tech-box.module.scss
+++ b/src/components/home/techs/tech-box.module.scss
@@ -5,6 +5,11 @@
   background: rgba(255, 255, 255, 0.25);
   padding: 10px;
 
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeIn 0.5s ease-out forwards;
+  will-change: transform, opacity;
+
   .techTitle {
     display: flex;
     justify-content: center;
@@ -18,5 +23,23 @@
     grid-template-columns: repeat(5, 1fr);
     gap: 5px;
     margin-top: 10px;
+  }
+}
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@for $i from 1 through 10 {
+  .techsBox:nth-child(#{$i}) {
+    animation-delay: $i * 0.2s;
   }
 }
