--- a/src/components/home/techs/tech-image.module.scss
+++ b/src/components/home/techs/tech-image.module.scss
@@ -6,9 +6,31 @@
     box-shadow: none;
     transition: 100ms;
 
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeIn 0.5s ease-out forwards;
+    will-change: transform, opacity;
+
     &:hover {
       transform: scale(1.02);
       transition: 100ms;
     }
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@for $i from 1 through 10 {
+  .techImage:nth-child(#{$i}) {
+    animation-delay: $i * 0.3s;
   }
 }
