--- a/src/components/home/techs/tier-box.module.scss
+++ b/src/components/home/techs/tier-box.module.scss
@@ -31,10 +31,8 @@
       background-color: crimson;
     }
 
-    p {
-      font-size: 20px;
-      font-weight: 600;
-      color: white;
+    img {
+      box-shadow: none;
     }
   }
   .imagesBox {
