--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -50,6 +50,8 @@ html {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   background-color: #F6F6F6;
+  scrollbar-width: thin !important;
+  scrollbar-color: var(--primary) #e8e8e8;
 }
 body {
   min-height: 100vh;
