--- a/src/components/home/techs/tech-image.module.scss
+++ b/src/components/home/techs/tech-image.module.scss
@@ -1,5 +1,8 @@
 .techImage {
+  position: relative;
+  z-index: 10;
   img {
+    cursor: pointer;
     width: 50px;
     height: 50px;
     object-fit: contain;
