--- a/src/components/home/techs/tier-box.module.scss
+++ b/src/components/home/techs/tier-box.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   min-height: 100px;
   box-shadow: 0 3px 6px var(--shadow);
+  z-index: 1;
 
   opacity: 0;
   transform: translateY(20px);
