--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -139,3 +139,34 @@ hr {
 .polygon-shadow {
   filter: drop-shadow(0px 2px 2px var(--black));
 }
+
+.tech-dropdown {
+  position: fixed;
+  top: 100%;
+  left: 0;
+  background-color: var(--primary);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border: 2px solid var(--accent);
+  padding: 5px;
+  z-index: 99;
+  max-width: 300px;
+
+  img {
+    width: 75px;
+    height: 75px;
+    object-fit: contain;
+    box-shadow: none;
+    margin-right: 15px;
+  }
+  .tech-info {
+    h4 {
+      -webkit-text-fill-color: white;
+      font-size: 22px;
+      font-weight: 600;
+    }
+    p {
+      color: white !important;
+      font-size: 14px;
+    }
+  }
+}
