--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -140,6 +140,8 @@ hr {
   filter: drop-shadow(0px 2px 2px var(--black));
 }
 
+// TechImage Dropdown
+
 .tech-dropdown {
   position: fixed;
   top: 100%;
@@ -147,22 +149,34 @@ hr {
   background-color: var(--primary);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border: 2px solid var(--accent);
-  padding: 5px;
+  padding: 10px;
   z-index: 99;
-  max-width: 300px;
+  min-width: 370px;
+  max-width: 370px;
 
   img {
     width: 75px;
     height: 75px;
     object-fit: contain;
     box-shadow: none;
-    margin-right: 15px;
+    margin-right: 10px;
+  }
+  .tech-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
   }
   .tech-info {
     h4 {
       -webkit-text-fill-color: white;
       font-size: 22px;
       font-weight: 600;
+    }
+    h5 {
+      -webkit-text-fill-color: white;
+      font-weight: 500;
+      font-size: 14px;
     }
     p {
       color: white !important;
