Update several things

--- a/src/components/home/techs/tier-box.module.scss
+++ b/src/components/home/techs/tier-box.module.scss
@@ -29,6 +29,9 @@
       background-color: var(--alternative);
     }
     &.t4 {
+      background-color: #E34F26;
+    }
+    &.t5 {
       background-color: crimson;
     }
 
