--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -163,7 +163,7 @@ hr {
   }
   .tech-header {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     margin-bottom: 5px;
   }
