--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -46,4 +46,9 @@ const alternateEN = new URL(`en${urlWithoutLang}`, Astro.site);
 	<meta name="twitter:image:alt" content={title} />
 	<meta name="twitter:site" content="@Kevfiorentino" />
 	<meta name="twitter:creator" content="@Kevfiorentino" />
+
+  <!-- Imports Poppins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
 </head>
