--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -47,8 +47,7 @@ const lang = getLangFromUrl(Astro.url);
 }
 html {
   scroll-behavior: smooth;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: "Poppins", serif;
   background-color: #F6F6F6;
   scrollbar-width: thin !important;
   scrollbar-color: var(--primary) #e8e8e8;
