--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -41,3 +41,45 @@
     gap: 15px;
   }
 }
+
+.skeletonWrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: start;
+  gap: 30px;
+  .skeletonBox {
+    height: 200px;
+    width: 100%;
+    background: #13161C;
+    opacity: .4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background: linear-gradient(90deg, #13161C 25%, #1E222A 50%, #13161C 75%);
+    background-size: 200% 100%;
+    animation: shimmer 1.5s infinite;
+
+    .skeletonTitle {
+      display: flex;
+      justify-content: center;
+      background-color: var(--accent);
+      padding: 7px 40px;
+      margin-top: -20px;
+      width: max-content;
+
+      background: linear-gradient(90deg, var(--accent) 25%, #337CBB 50%, var(--accent) 75%);
+      background-size: 200% 100%;
+      animation: shimmer 1.5s infinite;
+    }
+  }
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -200%;
+  }
+  100% {
+    background-position: 200%;
+  }
+}
