Fix ssr problem

--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -3,6 +3,7 @@
   h2 {
     -webkit-text-fill-color: white;
     margin-bottom: 20px;
+    font-weight: 700;
   }
   .techMainBox {
     display: grid;
