--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -142,13 +142,13 @@ hr {
   position: fixed;
   top: 100%;
   left: 0;
-  background-color: var(--primary);
+  background-color: #E5E7EB;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border: 2px solid var(--accent);
+  border: 3px solid var(--accent);
   padding: 10px;
   z-index: 99;
-  min-width: 370px;
-  max-width: 370px;
+  min-width: 400px;
+  max-width: 400px;
 
   img {
     width: 75px;
@@ -191,17 +191,17 @@ hr {
   }
   .tech-info {
     h4 {
-      -webkit-text-fill-color: white;
+      -webkit-text-fill-color: var(--primary);
       font-size: 22px;
-      font-weight: 600;
+      font-weight: 700;
     }
     h5 {
-      -webkit-text-fill-color: white;
+      -webkit-text-fill-color: var(--primary);
       font-weight: 500;
       font-size: 14px;
     }
     p {
-      color: white !important;
+      color: #1D1D1D !important;
       font-size: 14px;
       line-height: 18px;
     }
