--- a/src/components/home/Presentation.astro
+++ b/src/components/home/Presentation.astro
@@ -93,4 +93,9 @@ const t = useTranslations(lang);
   max-height: 280px;
   clip-path: polygon(15% 10%, 100% 0, 100% 25%, 100% 100%, 0 85%);
 }
+@media (max-width: 1024px) {
+  .hero {
+    height: auto;
+  }
+}
 </style>
