--- a/src/components/home/Presentation.astro
+++ b/src/components/home/Presentation.astro
@@ -86,7 +86,7 @@ const t = useTranslations(lang);
 
 <style lang="scss">
 .hero {
-  height: calc(100vh - 160px);
+  height: 92vh;
   align-items: center;
 }
 .kev-image {
