--- a/src/components/home/Blog.astro
+++ b/src/components/home/Blog.astro
@@ -14,7 +14,7 @@ const { posts } = Astro.props;
     <h2 class="text-gradient font-bold mb-0">
       Blog
     </h2>
-    <hr class="mt-2 mb-0">
+    <hr class="hr mt-2 mb-0">
     <br>
     <div role="list" class="cards-grid mt-4">
       {
