--- a/src/components/home/Presentation.astro
+++ b/src/components/home/Presentation.astro
@@ -100,6 +100,9 @@ const t = useTranslations(lang);
     height: auto;
   }
 }
+h1 {
+  font-weight: 900;
+}
 .presentation {
   p {
     font-size: 15px;
