--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -66,7 +66,7 @@ strong {
   font-weight: 600;
 }
 
-hr {
+.hr {
   border-color: var(--black);
   margin-bottom: 15px;
 }
@@ -75,7 +75,7 @@ hr {
   p, li {
     color: var(--white);
   }
-  hr {
+  .hr {
     border-color: var(--white);
   }
 }
