--- a/src/components/home/Presentation.astro
+++ b/src/components/home/Presentation.astro
@@ -88,7 +88,7 @@ const t = useTranslations(lang);
 
 <style lang="scss">
 .hero {
-  height: 92vh;
+  height: calc(100vh - 144px);
   align-items: center;
 }
 .kev-image {
