--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -38,6 +38,7 @@ const lang = getLangFromUrl(Astro.url);
 :root {
   --white: #FAFAFA;
   --black: #1D1D1D;
+  --grey: #797979;
   --primary: #2596BE;
   --accent: #2A72B2;
   --alternative: #E1C546;
