--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,10 +27,12 @@ h1 {
   font-size: 3rem;
   font-weight: 800;
   margin: 10px 0;
+  line-height: 50px;
 }
 
 h2 {
   font-size: 2.3rem;
+  line-height: 42px;
 }
 
 h3 {
