--- a/src/components/home/Projects/components/styles.module.scss
+++ b/src/components/home/Projects/components/styles.module.scss
@@ -18,6 +18,7 @@
   z-index: 999;
   background-color: rgba(0, 0, 0, 0.4);
   animation: fadeIn 0.3s ease-in-out forwards;
+  margin: 10px;
 
   width: 100vw;
   height: 100vh;
@@ -39,8 +40,59 @@
       gap: 20px;
 
       .projectImage {
-        img {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
 
+        .mainImage {
+          text-align: center;
+          .carousel {
+            button {
+              border: 1px solid var(--primary);
+              background-color: #E5E7EB;
+              width: 20px;
+              height: 20px;
+              margin: 20px 5px;
+            }
+            button.active {
+              background-color: var(--primary);
+            }
+          }
+        }
+        .visit {
+          text-align: center;
+          a {
+            display: inline-block;
+            font-weight: 500;
+            color: var(--white);
+            background-color: var(--primary);
+            border: 2px solid var(--primary);
+            padding: 3px 15px;
+            margin-bottom: 20px;
+            max-width: 200px;
+          }
+          a:hover {
+            color: var(--primary);
+            background-color: #E5E7EB;
+          }
+          span {
+            display: inline-block;
+            color: crimson;
+            font-weight: 500;
+            margin: 25px 0;
+          }
+        }
+        .techs {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          img {
+            width: 50px;
+            height: 50px;
+            object-fit: contain;
+            box-shadow: none;
+          }
         }
       }
       .projectInfo {
@@ -53,13 +105,17 @@
           display: inline-block;
           margin-bottom: 5px;
         }
+        p {
+          color: var(--black) !important;
+          margin-bottom: 5px;
+        }
       }
     }
 
     .close {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 10px;
+      right: 10px;
     }
   }
 
