--- a/src/components/home/Projects/components/styles.module.scss
+++ b/src/components/home/Projects/components/styles.module.scss
@@ -18,7 +18,6 @@
   z-index: 999;
   background-color: rgba(0, 0, 0, 0.4);
   animation: fadeIn 0.3s ease-in-out forwards;
-  margin: 10px;
 
   width: 100vw;
   height: 100vh;
@@ -100,6 +99,10 @@
           font-weight: 800;
           margin-bottom: 0;
         }
+        h4 {
+          font-weight: 600;
+          line-height: 28px;
+        }
         span {
           color: var(--grey);
           display: inline-block;
@@ -121,7 +124,10 @@
 
   @media (max-width: 1152px) {
     .modalContainer {
-      width: max-content;
+      max-height: 75vh;
+      width: auto;
+      margin: 10px;
+      overflow: scroll;
 
       .projectLayout {
         grid-template-columns: 100%;
