--- a/src/components/home/Projects/components/styles.module.scss
+++ b/src/components/home/Projects/components/styles.module.scss
@@ -79,7 +79,8 @@
             display: inline-block;
             color: crimson;
             font-weight: 500;
-            margin: 25px 0;
+            margin-top: 5px;
+            margin-bottom: 20px;
           }
         }
         .techs {
