Add techs to projects

--- a/src/components/home/Projects/styles.module.scss
+++ b/src/components/home/Projects/styles.module.scss
@@ -12,6 +12,7 @@
   @media (max-width: 1152px) {
     .projectWrapper {
       grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
     }
   }
 }
