--- a/src/components/home/Projects/components/styles.module.scss
+++ b/src/components/home/Projects/components/styles.module.scss
@@ -87,6 +87,8 @@
           display: flex;
           justify-content: flex-start;
           align-items: center;
+          flex-wrap: wrap;
+          gap: 5px;
           img {
             width: 50px;
             height: 50px;
