--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ const langToSwith = currentLang === 'es' ? 'en' : 'es';
                 Kevin Fiorentino <span class="hidden md:inline">—△🌈</span>
               </a>
               <p class="mt-1.5 text-sm">
-                Software Engineer | Bachelor's in Information Systems
+                Software Architect | Bachelor's in Information Systems
               </p>
             </div>
 
