--- a/src/components/home/Presentation.astro
+++ b/src/components/home/Presentation.astro
@@ -23,12 +23,15 @@ const t = useTranslations(lang);
       <p class="mb-2">
         {t('home.presentation4')}
       </p>
+      <p class="mb-2">
+        {t('home.presentation5')}
+      </p>
     </div>
   </div>
   <div class="order-first md:order-last">
 
     <div class="polygon-shadow">
-      <img src="/kevin.webp" class="kev-image m-auto" alt="Kevin Fiorentino" />
+      <img src="/kevin2025.jpg" class="kev-image m-auto" alt="Kevin Fiorentino" />
     </div>
 
     <div class="flex justify-center items-center my-4">
@@ -92,8 +95,8 @@ const t = useTranslations(lang);
   align-items: center;
 }
 .kev-image {
-  max-height: 280px;
-  clip-path: polygon(15% 10%, 100% 0, 100% 25%, 100% 100%, 0 85%);
+  max-height: 320px;
+  clip-path: polygon(10% 5%, 100% 0, 100% 25%, 100% 100%, 0 95%);
 }
 @media (max-width: 1024px) {
   .hero {
