--- a/src/pages/[lang]/blog/[collection]/[slug].astro
+++ b/src/pages/[lang]/blog/[collection]/[slug].astro
@@ -59,7 +59,7 @@ const { Content, headings } = await post.render();
 <MainLayout
   title={`${param.lang == 'es' ? title : enTitle} | Kevin Fiorentino`}
   description={`${param.lang == 'es' ? description : enDescription}`}
-  image='/kevin.webp'
+  image='/kevin2025.jpg'
   addWidth={true}
 >
   <section class="grid grid-cols-5">
