--- a/src/pages/[lang]/blog/[collection]/index.astro
+++ b/src/pages/[lang]/blog/[collection]/index.astro
@@ -41,7 +41,7 @@ const post = Astro.props;
 <MainLayout
   title={`Blog ${collectionNameMapping(param.collection)} | Kevin Fiorentino`}
   description={`Blog collection: ${collectionNameMapping(param.collection)}`}
-  image='/kevin.webp'
+  image='/kevin2025.jpg'
   addWidth={false}
 >
   <div class="main-width">
