--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -54,7 +54,7 @@ const { main, others } = Astro.props;
 <MainLayout
   title={`Blog | Kevin Fiorentino`}
   description={`Kevin Fiorentino's personal blog`}
-  image="/kevin.webp"
+  image="/kevin2025.jpg"
   addWidth={false}
 >
   <section class="main-width">
