--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -45,8 +45,8 @@ const { posts } = Astro.props;
 
 <MainLayout
   title="Home | Kevin Fiorentino"
-  description={`Kevin Fiorentino's personal and professional website`}
-  image="/kevin.webp"
+  description={`Kevin Fiorentino's professional website.`}
+  image="/kevin2025.jpg"
   addWidth={false}
 >
 
