--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -196,6 +196,7 @@ strong {
       -webkit-text-fill-color: var(--primary);
       font-size: 22px;
       font-weight: 700;
+      line-height: 25px;
     }
     h5 {
       -webkit-text-fill-color: var(--primary);
