--- a/src/components/home/Techs/components/styles.module.scss
+++ b/src/components/home/Techs/components/styles.module.scss
@@ -23,7 +23,7 @@
   }
   .imagesBox {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     gap: 5px;
     margin-top: 10px;
   }
@@ -41,10 +41,11 @@
 
 .techImage {
   position: relative;
+  margin: auto;
   img {
     cursor: pointer;
-    width: 50px;
-    height: 50px;
+    width: 46px;
+    height: 46px;
     object-fit: contain;
     box-shadow: none;
     transition: 100ms;
@@ -111,7 +112,7 @@
   }
   .imagesBox {
     display: grid;
-    grid-template-columns: repeat(20, 1fr);
+    grid-template-columns: repeat(23, 1fr);
     gap: 5px;
     width: 90%;
     padding: 10px;
